// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Messages component renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badege"
  >
    4
  </div>
</div>
`;

exports[`Messages component renders without crashing 1`] = `
<div
  className="messages"
>
  messages
</div>
`;

exports[`renders the UI as expected 1`] = `
<div
  className="messages"
>
  Messages
  <div
    className="unread_count badege"
  >
    4
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div
  className="messages"
>
  messages
</div>
`;
